<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.millsoft.aitts.WelcomeFragment">

    <!-- TODO: Update blank fragment layout -->



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:gravity="center_vertical"

        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="132dp"
            android:layout_height="120dp"
            android:layout_centerInParent="true"
            android:src="@mipmap/ic_app"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/txt_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_logo"
            android:gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/welcome_to_aitts"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_welcome"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/welcome_text"
            android:textAlignment="center"
 />

        <Button
            android:id="@+id/btn_welcome_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_welcome_text"
            android:layout_centerInParent="true"
            android:text="@string/yes_i_have_the_api_key" />



        <TextView
            android:id="@+id/btn_welcome_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_welcome_yes"
            android:gravity="center"
            android:paddingTop="15dp"
            android:text="@string/btn_no_key"
             />


    </RelativeLayout>

</LinearLayout>
